syntax = "proto3";

package pb;

option go_package = ".;pb";
import "google/protobuf/timestamp.proto";

service InviteService {

  rpc GetInvites(GetInvitesRequest) returns (stream Invite);

  rpc GetInviteById(GetInviteId) returns (InviteResponse);

  rpc CreateInvite(CreateIviteRequest) returns (InviteResponse);

  rpc UpdateInvite(UpdateInviteRequest) returns (InviteResponse);

  rpc DeleteInvite(GetInviteId) returns (DeleteInviteResponse);
}

message Invite {
  int32 id = 1;
  int32 user_id = 2;
  int32 event_id = 3;
  TYPE type = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetInvitesRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetInviteId { int32 id = 1; }

message InviteResponse { Invite invite = 1; }

message CreateIviteRequest {
  int32 user_id = 1;
  int32 event_id = 2;
  TYPE type = 3;
}

message UpdateInviteRequest {
  int32 id = 1;
  int32 user_id = 2;
  int32 event_id = 3;
  TYPE type = 4;
}

message DeleteInviteResponse { bool success = 1; }

enum TYPE {
  ATTENDEE = 0;
  VIP = 1;
}